--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,8 +14,13 @@ dependencies = [
 requires-python = ">=3.8"
 
 authors = [
-  { name="James Pino", email="james.ch.pino@gmail.com" , roles=["author", "maintainer"]},
-  { name="Jeremy Zucker", email="jeremy.zucker@pnnl.gov" , roles=["author", "maintainer"]},
+    # add everyone who contributed to the project
+  { name="James Pino", email="james.ch.pino@gmail.com" },
+
+  { name="Jeremy Zucker", email="jeremy.zucker@pnnl.gov" },
+  { name="Andrew M", email="andrew.mcnaughton@pnnl.gov" },
+  { name="Shant Mahserejian", email="shant.mahserejian@pnnl.gov" },
+  { name="Vlad Petyuk", email="vladislav.petyuk@pnnl.gov" },
 ]
 description = "Genome scale metabolic modeling toolkit used for various projects at PNNL"
 readme = "README.md"
@@ -35,7 +40,7 @@ Issues = "https://github.com/pnnl-predictive-phenomics/concerto/issues"
 
 [tool.setuptools.packages.find]
 # All the following settings are optional:
-where = ["src"]  # ["."] by default
+where = ["."]  # ["."] by default
 include = ["concerto*"]  # ["*"] by default
 exclude = ["tests*"]  # empty by default
 
